restructure projects into folders

--- a/Test/TrueLayerChallenge.Service.PokemonService.Test/TrueLayerChallenge.Service.PokemonService.Test.csproj
+++ b/Test/TrueLayerChallenge.Service.PokemonService.Test/TrueLayerChallenge.Service.PokemonService.Test.csproj
@@ -16,8 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TrueLayerChallenge.Domain\TrueLayerChallenge.Domain.csproj" />
-    <ProjectReference Include="..\TrueLayerChallenge.Service.TranslationService\TrueLayerChallenge.Service.TranslationService.csproj" />
+    <ProjectReference Include="..\..\TrueLayerChallenge.Service.PokemonService\TrueLayerChallenge.Service.PokemonService.csproj" />
   </ItemGroup>
 
 </Project>
